--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "牛逼坏了叉会腰"
 ---
 
 {% for post in paginator.posts %}
