--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "牛逼坏了叉会腰"
+description: "国家一级Api调用员,CV大师,精通各类语言 hello word"
 ---
 
 {% for post in paginator.posts %}
